# project_structure

./: Makefile  README.rst  pyproject.toml  req.txt
core/core/utils/: collections.py  misc.py  settings.py
core/project/settings/: base.py
core/project/settings/templates/: __init__.py
local/: settings.dev.py
