[tool.poetry]
name = "project-structure"
version = "0.1.0"
description = ""
authors = ["fayzullohblog <fayzulloh00010003@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django-filter = "^23.5"
djangorestframework = "^3.14.0"
django = "^5.0.2"
django-split-settings = "^1.2.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
